tests/Aspire.Hosting.Kubernetes.Tests/Snapshots/KubernetesPublisherTests.KubernetesIngressAndGatewayRouteToServicePortForDistinctPorts#01.verified.yaml
---
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "ingress"
spec:
  ingressClassName: "nginx"
  rules:
    - http:
        paths:
          - backend:
              service:
                name: "api-service"
                port:
                  name: "http"
            pathType: "Prefix"
            path: "/api"
